# SQLiteCpp

./: CHANGELOG.md  CMakeLists.txt  LICENSE.txt  README.md
examples/: CMakeLists.txt  basic.cpp
include/SQLiteCpp/: Assertion.h  Backup.h  Column.h  Database.h  Exception.h  SQLiteCpp.h  Statement.h
libs/sqlite3/: CMakeLists.txt  README.md
src/: Backup.cpp  CMakeLists.txt  Column.cpp  Database.cpp  Exception.cpp  Statement.cpp
src/examples/example1/: main.cpp
src/tests/: Backup_test.cpp  Column_test.cpp  Database_test.cpp  Exception_test.cpp  Statement_test.cpp  Transaction_test.cpp
tests/: Backup.cpp  CMakeLists.txt  Column.cpp  Database.cpp  Exception.cpp  Statement.cpp  Transaction.cpp  VariadicBind.cpp
